# Octobotics_Coding_Assignment

./: README.md
src/inverted_pendulum_controller/: CMakeLists.txt  package.xml
src/inverted_pendulum_controller/launch/: controller.launch
src/inverted_pendulum_controller/src/: PIDController.py  sinosodial_force_publisher.py
src/inverted_pendulum_sim/src/: inverted_pendulum_sim_node.py
